@@ -28,6 +28,12 @@ glimmer.pdf:	glimmer_pdf.dvi
 glimmer.ps:	glimmer_ps.dvi
 	dvips -o glimmer.ps glimmer_ps.dvi
 
+code_doc.ps:	code_doc.dvi
+		dvips -o code_doc.ps code_doc.dvi
+
+code_doc.tex:	../src/fortran/*.f90
+		f90docp.py -t "GLIMMER Code Documentation" -a "Glimmer Developer Team" $^ > $@
+
 install:	glimmer.ps glimmer.pdf
 		install -d $(GLIMMER_PREFIX)/share/docs/glimmer
 		cp $^ $(GLIMMER_PREFIX)/share/docs/glimmer
