@@ -1,3 +1,6 @@
+2004-06-16 Magnus Hagdorn
+ * minor documentation fixes
+
 2004-06-15 Magnus Hagdorn
  * fixed doc Makefile
 
